@@ -1,5 +1,11 @@
 New entries should be added at the top
 
+2005-06-05 Added a ps.distill option in rc settings. If True, postscript
+           output will be distilled using ghostscript, which should trim
+           the file size and allow it to load more quickly. Hopefully this
+           will address the issue of large ps files due to font 
+           definitions. Tested with gnu-ghostscript-8.16. - DSD
+
 2005-06-03 Improved support for tex handling of text in backend_ps. - DSD 
 
 2005-06-03 Added rc options to render text with tex or latex, and to select 
